--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "firebase": "^10.10.0",
-    "nodemon": "^3.1.0",
+    "moment": "^2.30.1",
+    "nodemon": "^3.1.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
