--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
+    "bootstrap": "^5.3.3",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "firebase": "^10.10.0",
@@ -24,6 +25,7 @@
     "react-firebase-hooks": "^5.1.1",
     "react-router-dom": "^6.22.3",
     "react-select": "^5.8.0",
+    "reactjs-popup": "^2.0.6",
     "vercel": "^35.2.3"
   },
   "devDependencies": {
