--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
     "react-full-screen": "^1.1.1",
+    "react-icons": "^5.2.1",
     "react-lazy-load-image-component": "^1.6.2",
     "react-router-dom": "^6.22.3",
     "react-select": "^5.8.0",
